--- a/about-us.html
+++ b/about-us.html
@@ -283,7 +283,7 @@
       <div class="main-content">
         <section
           class="inner-header divider parallax layer-overlay overlay-dark-5"
-          data-bg-img="images/bg/bg3.jpg"
+          data-bg-img="images/bg/bg-about.jpg"
         >
           <div class="container pt-70 pb-20">
             <div class="section-content">
