--- a/contact-us.html
+++ b/contact-us.html
@@ -282,7 +282,7 @@
       <div class="main-content">
         <section
           class="inner-header divider parallax layer-overlay overlay-dark-5"
-          data-bg-img="images/bg/bg3.jpg"
+          data-bg-img="images/bg/bg-about.jpg"
         >
           <div class="container pt-70 pb-20">
             <div class="section-content">
@@ -469,7 +469,7 @@
                         <strong class="text-white">OUR CONTACT E-MAIL</strong>
                         <p>
                           <a
-                            href="https://html.kodesolution.com/cdn-cgi/l/email-protection"
+                            href="#"
                             class="__cf_email__"
                             data-cfemail="64171114140b161001241d0b1116000b090d0a4a070b09"
                             >info@nexteducation.com</a
@@ -499,7 +499,7 @@
           <div class="container-fluid p-0">
             <div class="row">
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5456.163483134849!2d144.95177475051227!3d-37.81589041361766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4dd5a05d97%3A0x3e64f855a564844d!2s121+King+St%2C+Melbourne+VIC+3000%2C+Australia!5e0!3m2!1sen!2sbd!4v1556130803137!5m2!1sen!2sbd"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7858.176659649192!2d77.4675352935791!3d10.009562500000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07152152862c6b%3A0xd68e5a308f5251f4!2sTHENI%20EDUCATIONAL%20CONSULTANCY!5e0!3m2!1sen!2sin!4v1709701970628!5m2!1sen!2sin"
                 width="100%"
                 height="450"
                 frameborder="0"
